<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPercentage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/other_buttons"
                android:onClick="buttonPercentage"
                android:text="@string/percentage"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/other_buttons"
                android:onClick="buttonClear"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonBackspace"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/other_buttons"
                android:onClick="buttonBackspace"
                android:text="@string/backspace"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOneOverX"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/other_buttons"
                android:onClick="buttonOneOverX"
                android:text="@string/oneOverX"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <Button
                android:id="@+id/buttonXSquared"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/other_buttons"
                android:onClick="buttonSquared"
                android:text="@string/squared"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSqrt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/other_buttons"
                android:onClick="buttonSqrt"
                android:text="@string/sqrt"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonDivision"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/function_buttons"
                android:onClick="buttonDivision"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonSeven"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonEight"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonNine"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonTimes"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/function_buttons"
                android:onClick="buttonTimes"
                android:text="@string/times"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonFour"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonFive"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonSix"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSub"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/function_buttons"
                android:onClick="buttonSub"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonOne"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonTwo"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonThree"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/function_buttons"
                android:onClick="buttonAdd"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPlusMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonPlusMinus"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonZero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonPoint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons"
                android:onClick="buttonPoint"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/function_buttons"
                android:onClick="buttonEquals"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:textColor="@color/white"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>